--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="latest-works">
 
-        <h2>My Latest Works</h2>
+        <h1>My Latest Works</h1>
         <div class="work-container">
         <div class="work-item">
             <img src="img/work-1.png" alt=""/>
@@ -57,7 +57,26 @@
             <img src="img/work-3.jpg" alt=""/>
         </div>
         </div>
+
     </section>
+
+    <section class="client-section">
+        <div class="client-quote">
+            <h1>What clients are saying</h1>
+            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, illum."</p>
+            <h3>Luca Brasi</h3>
+            <p>Cheif Enforcer</p>
+        </div>
+        <div class="email">
+            <p>Leave me a message</p>
+            <h1>emai2tafsir@gmail.com</h1>
+        </div>
+
+    </section>
+
+    <footer>
+        (C) All Rights have to be reserved!
+    </footer>
     
 </body>
 
