--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Ubuntu&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="animate.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet"/>
 
 </head>
 
@@ -26,19 +27,16 @@
     </section>
 
     <section class="biography-section">
-
         <div class="half-slice">
             <img src="img/peter_dream.png" alt="" />
         </div>
 
         <div class="half-slice intro">
-            <h2>Bio!</h2>
-            <h1>Graphy</h1>
+            <h2>Biography</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rerum sapiente delectus ducimus, ullam optio harum expedita obcaecati quibusdam illo eligendi eos at possimus ab ad! Nostrum quasi architecto maiores!</p>
             <br/>
             <a class="mybutton" href="#">Hire Me</a>
         </div>
-
     </section>
 
     <section class="latest-works">
@@ -67,7 +65,7 @@
             <h3>Luca Brasi</h3>
             <p>Cheif Enforcer</p>
         </div>
-        <div class="email">
+        <div class="email-button">
             <p>Leave me a message</p>
             <h1>emai2tafsir@gmail.com</h1>
         </div>
