--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Biography</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rerum sapiente delectus ducimus, ullam optio harum expedita obcaecati quibusdam illo eligendi eos at possimus ab ad! Nostrum quasi architecto maiores!</p>
             <br/>
-            <a class="mybutton" href="#">Hire Me</a>
+            <a class="mybutton" href="#">Download CV</a>
         </div>
     </section>
 
@@ -61,19 +61,18 @@
     <section class="client-section">
         <div class="client-quote">
             <h1>What clients are saying</h1>
-            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, illum."</p>
-            <h3>Luca Brasi</h3>
-            <p>Cheif Enforcer</p>
+            <h2>Luca Brasi</h2>
+            <h3>Cheif Enforcer</h3>
+            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, illum."</p> 
         </div>
         <div class="email-button">
             <p>Leave me a message</p>
             <h1>emai2tafsir@gmail.com</h1>
         </div>
-
     </section>
 
     <footer>
-        (C) All Rights have to be reserved!
+        <p>Tafsir Ⓒ All Rights Reserved!</p>
     </footer>
     
 </body>
