last but not the least

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,7 +12,7 @@
 </head>
 
 <body>
-
+    <!-- header start -->
     <section class="header-section">
         <div class="half-slice intro">
             <h2>Hello!</h2>
@@ -25,7 +26,9 @@
             <img src="img/peter.png" alt="" />
         </div>
     </section>
+    <!-- header end -->
 
+    <!-- biography start -->
     <section class="biography-section">
         <div class="half-slice">
             <img src="img/peter_dream.png" alt="" />
@@ -38,26 +41,28 @@
             <a class="mybutton" href="#">Download CV</a>
         </div>
     </section>
+    <!-- biography end -->
 
+    <!-- latest works start -->
     <section class="latest-works">
-
         <h1>My Latest Works</h1>
         <div class="work-container">
-        <div class="work-item">
-            <img src="img/work-1.png" alt=""/>
-        </div>
+            <div class="work-item">
+                <img src="img/work-1.png" alt=""/>
+            </div>
 
-        <div class="work-item">
-            <img src="img/work-2.jpg" alt=""/>
+            <div class="work-item">
+                <img src="img/work-2.jpg" alt=""/>
+            </div>
+            
+            <div class="work-item">
+                <img src="img/work-3.jpg" alt=""/>
+            </div>
         </div>
-
-        <div class="work-item">
-            <img src="img/work-3.jpg" alt=""/>
-        </div>
-        </div>
-
     </section>
+    <!-- latest works end -->
 
+    <!-- client section start -->
     <section class="client-section">
         <div class="client-quote">
             <h1>What clients are saying</h1>
@@ -65,11 +70,12 @@
             <h3>Cheif Enforcer</h3>
             <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, illum."</p> 
         </div>
-        <div class="email-button">
+        <div class="email-button animated slow pulse infinite">
             <p>Leave me a message</p>
             <h1>emai2tafsir@gmail.com</h1>
         </div>
     </section>
+    <!-- client section end-->
 
     <footer>
         <p>Tafsir Ⓒ All Rights Reserved!</p>
